--- a/src/app/screens/broadcast-sms/broadcast-sms.component.css
+++ b/src/app/screens/broadcast-sms/broadcast-sms.component.css
@@ -262,29 +262,44 @@
 
 .c-header {
   display: flex;
-  gap: 1.5rem;
+  flex-direction: column;
+  justify-content: end;
   background: #eee;
-  align-items: center;
-  padding: 1.25rem;
+  background-image: url(../../../assets/heading-bg-broadcast.png);
+  border-radius: 17px;
+  width: 200px;
+  height: 70px;
+  position: relative;
+  padding: 16px;
+  margin-bottom: 10px;
 }
 
 .c-header h1 {
-  color: #030303;
+  color: white;
   font-family: Poppins;
-  font-size: 1.2rem;
+  font-size: 1.6rem;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 140%;
+  margin-bottom: 0;
   /* 33.6px */
 }
 
 .c-header p {
-  color: #030303;
-  font-size: 0.8rem;
+  position: absolute;
+  margin-bottom: 0;
+  top: 10px;
+  left: 16px;
+
+  color: var(--Secondary-Grey-400, #e9edf7);
+
+  /* Body Text/ Extra-Small/ Medium */
+  font-family: "DM Sans";
+  font-size: 12px;
   font-style: normal;
-  line-height: normal;
-  gap: 0.4rem;
-  display: flex;
+  font-weight: 500;
+  line-height: 20px; /* 166.667% */
+  letter-spacing: -0.24px;
 }
 
 .c-list {
@@ -292,7 +307,11 @@
   flex-direction: column;
   gap: 0.75rem;
   max-height: 70vh;
+  padding: 0 10px;
   overflow-y: auto;
+  background: white;
+  box-shadow: 0 0 10px rgba(211, 211, 211, 0.5);
+  border-radius: 10px;
 }
 
 .c-list div {
@@ -304,7 +323,6 @@
   font-weight: 600;
   line-height: normal;
   letter-spacing: -0.412px;
-  border-radius: 5px;
   border-bottom: 0.5px solid #eee;
   background: #fff;
 }
@@ -490,7 +508,7 @@
 .btns button {
   border-radius: 8px;
   background: linear-gradient(0deg, #2ebc96 0%, #1a9096 100%);
-  box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.5);
+  box-shadow: 0 0 10px lightgray;
   padding: 0.75rem;
   border: none;
   outline: none;
@@ -523,8 +541,11 @@
   flex: 1;
   min-width: 300px;
   max-width: 450px;
-  max-height: 70vh;
+  max-height: 90vh;
   overflow-y: auto;
+  box-shadow: 0 0 10px lightgray;
+  border-radius: 17px;
+  background: white;
 }
 
 .left-main-head {
@@ -538,26 +559,27 @@
   font-weight: 500;
   line-height: 140%;
   /* 33.6px */
-  background: #eee;
+  background: white !important;
 }
 
 .fields {
-  padding: 1.5rem;
+  padding: 0 1.5rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 1.5rem;
+  background: white !important;
 }
 
 .inp-con {
   display: flex;
   flex-direction: column;
-  gap: 0.7rem;
+  gap: 0.3rem;
 }
 
 .inp-con label {
   color: #030303;
   font-family: Poppins;
-  font-size: 1.1rem;
+  font-size: 0.8rem;
   font-style: normal;
   font-weight: 600;
   line-height: 140%;
@@ -575,7 +597,7 @@
 .inp-con textarea {
   border-radius: 9px;
   border: 1px solid #e5e5ed;
-  padding: 1rem;
+  padding: 5px 1rem;
   outline: none;
 }
 
@@ -615,8 +637,10 @@
   padding: 1rem;
   border-radius: 1rem;
   text-wrap: wrap;
+  text-wrap-mode: wrap;
   overflow: auto;
   line-break: auto;
+  white-space: wrap;
 }
 
 .badge {
