--- a/src/app/screens/broadcast-sms/broadcast-sms.component.html
+++ b/src/app/screens/broadcast-sms/broadcast-sms.component.html
@@ -94,9 +94,16 @@
             </select>
           </div>
           <div class="inp-con message">
-            <label for="">Message</label>
+            <div>
+              <label for=""
+                >Message
+                <img style="width: 20px" src="../../../assets/warning.png"
+              /></label>
+              <span>{{ newBroadcastDesc.length }}/160</span>
+            </div>
             <textarea
               [(ngModel)]="newBroadcastDesc"
+              maxlength="160"
               placeholder=" Type message here"
             ></textarea>
           </div>
@@ -111,10 +118,7 @@
       <div class="contacts">
         <div class="c-header">
           <h1>Contact List</h1>
-          <p>
-            <strong>TOTAL NO:</strong>
-            <span>10</span>
-          </p>
+          <p>Total contact: 10</p>
         </div>
         <div class="c-list">
           <div>03070186322</div>
