--- a/src/app/screens/profile/profile.component.css
+++ b/src/app/screens/profile/profile.component.css
@@ -29,11 +29,28 @@
   width: 100%;
   overflow: hidden;
   border-radius: 20px;
+  position: relative;
 }
 .cover-img img {
   width: 100%;
-  height: 50%;
-  position: relative;
+  height: 110px;
+  object-fit: cover;
+  
+}
+
+.covericon {
+  position: absolute;
+  bottom: 3px;
+  right: 3px;
+  background-color: white;
+  width: 40px !important;
+  height: 40px !important;
+  display: flex;
+  padding: 5px;
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 .profile-img {
   background-color: black;
@@ -89,38 +106,6 @@
   justify-content: center;
   cursor: pointer;
 }
-.covericon {
-  border-radius: 50%;
-  width: 30px;
-  height: 30px;
-  display: flex;
-  padding: 5px;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-}
-.editbutton {
-  display: flex;
-  /* height: 50px; */
-  padding: 15px 20px;
-  flex-direction: column;
-  justify-content: center;
-  align-items: flex-end;
-  gap: 10px;
-  border-radius: 8px;
-  background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
-  color: #fff;
-  border: none;
-  /* Texi */
-  font-family: Nunito;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  letter-spacing: 0.54px;
-  position: relative;
-  top: 10px;
-}
 
 .profile-details-settings {
   display: flex;
@@ -132,8 +117,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 200px;
+  padding: 0 150px;
+  /* border-bottom: 1px solid #e4e4e7;  */
 }
+
 
 .profile-details-settings div strong {
   color: var(--Gray---Tailwind-800, #1f2937);
@@ -146,6 +133,38 @@
   line-height: 24px; /* 150% */
 }
 
+.profile-Btn {
+  width: 88%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  gap: 15px;
+  margin-bottom: 15px;
+  margin-right: 20px !important;
+}
+.editbutton {
+  display: flex;
+  /* height: 50px; */
+  padding: 10px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 10px;
+  border-radius: 8px;
+  margin-right: 10px;
+  background: linear-gradient(270deg, #2ebc96 0%, #1a9096 100%);
+  color: #fff;
+  border: none;
+  font-family: Nunito;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.54px;
+  position: relative;
+  top: 10px;
+  margin-right: 10px;
+}
 .profile-details-settings div p {
   color: var(--Gray---Tailwind-600, #4b5563);
 
@@ -155,4 +174,37 @@
   font-style: normal;
   font-weight: 400;
   line-height: 24px; /* 150% */
+}
+
+.Canceltbutton {
+  display: flex;
+  padding: 10px;
+  margin-top: 20px;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  border-radius: 8px;
+  background: #ff3c23;
+  color: #fff;
+  border: none;
+  font-family: Nunito;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  letter-spacing: 0.54px;
+}
+
+#text {
+  border-radius: 10px;
+  border: 1px solid #1a9096;
+  background: rgba(163, 174, 208, 0.28);
+  display: flex;
+  width: 439px;
+  padding: 10px;
+  justify-content: flex-end;
+  align-items: center;
+  text-align: right;
+  gap: 10px;
+  outline: none;
 }
