--- a/src/app/screens/profile/profile.component.html
+++ b/src/app/screens/profile/profile.component.html
@@ -1,185 +1,134 @@
-<ng-container>
-  <div class="profile-imgs-con">
-    <div class="cover-img">
-      <img src="../../../assets/default_cover_img.png" class="coverImg" />
-      <img
-        src="../../../assets/icons/edit-03.png"
-        alt="edit"
-        class="covericon"
-      />
-    </div>
-    <div class="under-cover-img">
-      <div class="profile-img-con">
-        <p class="upload">Upload cover</p>
-        <div class="profile-img"></div>
-      </div>
-      <img
-        src="../../../assets/icons/edit-03.png"
-        alt="edit"
-        class="editIcon"
-      />
-    </div>
+<div class="profile-imgs-con">
+  <div class="cover-img">
+    <img
+      [src]="coverPreview || '../../../assets/default_cover_img.png'"
+      class="coverImg"
+    />
+    <img
+      src="../../../assets/icons/edit-03.png"
+      alt="edit"
+      class="covericon"
+      (click)="triggerFileInput('coverInput')"
+    />
+    <input
+      type="file"
+      id="coverInput"
+      hidden
+      accept="image/*"
+      (change)="onCoverSelected($event)"
+    />
   </div>
-
+  <div class="under-cover-img">
+    <div class="profile-img-con">
+      <p class="upload">Upload cover</p>
+      <div class="profile-img">
+        <img
+          *ngIf="profilePreview"
+          [src]="profilePreview"
+          style="
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            object-fit: cover;
+          "
+        />
+      </div>
+    </div>
+    <img
+      src="../../../assets/icons/edit-03.png"
+      alt="edit"
+      class="editIcon"
+      (click)="triggerFileInput('profileInput')"
+    />
+    <input
+      type="file"
+      id="profileInput"
+      hidden
+      accept="image/*"
+      (change)="onProfileSelected($event)"
+    />
+  </div>
+</div>
+<ng-container *ngIf="!isEditing">
   <div class="profile-details-settings">
     <div>
       <strong>Name</strong>
-      <p>your name</p>
+      <p>{{ user.name }}</p>
     </div>
     <div>
       <strong>User Name</strong>
-      <p>your name</p>
+      <p>{{ user.user_name }}</p>
     </div>
     <div>
       <strong>User ID</strong>
-      <p>your name</p>
+      <p>{{ user._id }}</p>
     </div>
     <div>
       <strong>Password</strong>
-      <p>your name</p>
+      <p>{{ user.password }}</p>
     </div>
     <div>
       <strong>Email account</strong>
-      <p>your name</p>
+      <p>{{ user.email || "Not available" }}</p>
     </div>
     <div>
       <strong>Mobile number </strong>
-      <p>your name</p>
+      <p>{{ user.phone }}</p>
     </div>
   </div>
-  <button class="editbutton">Edit Profile</button>
+  <div class="profile-Btn">
+    <button class="editbutton" (click)="onEdit()">Edit Profile</button>
+  </div>
+</ng-container>
 
-  <!-- <div class="h">Profile Settings</div>
-      <div class="profile-settings">
-        <div class="ps-left">
-          <div class="field">
-            <label>Name</label>
+<ng-container *ngIf="isEditing">
+  <div class="profile-details-settings">
+    <div>
+      <strong>User ID</strong>
+      <p>{{ user._id }}</p>
+    </div>
+    <div>
+      <strong>User Name</strong>
+      <label for="text">
+        <input type="text" id="text" [(ngModel)]="user.user_name" />
+      </label>
+    </div>
 
-            <div class="input">
-              <input type="text" placeholder="Enter your name" />
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="23"
-                height="23"
-                viewBox="0 0 23 23"
-                fill="none"
-              >
-                <path
-                  d="M20.9338 1.98586C20.6171 1.6705 20.2411 1.42101 19.8274 1.25181C19.4137 1.08261 18.9706 0.997052 18.5236 1.00008C18.0767 1.0031 17.6348 1.09465 17.2234 1.26944C16.8121 1.44422 16.4394 1.69878 16.127 2.0184L2.64566 15.4998L1 21.9197L7.41992 20.2731L20.9013 6.79173C21.221 6.47946 21.4756 6.10692 21.6505 5.69563C21.8253 5.28434 21.9169 4.84248 21.9199 4.39558C21.9229 3.94869 21.8374 3.50562 21.6681 3.09201C21.4988 2.67839 21.2493 2.30243 20.9338 1.98586V1.98586Z"
-                  stroke="#615E83"
-                  stroke-width="1.3"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </div>
-          </div>
-          <div class="field">
-            <label>Username</label>
+    <div>
+      <strong>Password</strong>
+      <label for="password">
+        <input type="text" id="text" [(ngModel)]="user.password" />
+      </label>
+    </div>
 
-            <div class="input">
-              <input type="text" placeholder="Enter your username" />
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="23"
-                height="23"
-                viewBox="0 0 23 23"
-                fill="none"
-              >
-                <path
-                  d="M20.9338 1.98586C20.6171 1.6705 20.2411 1.42101 19.8274 1.25181C19.4137 1.08261 18.9706 0.997052 18.5236 1.00008C18.0767 1.0031 17.6348 1.09465 17.2234 1.26944C16.8121 1.44422 16.4394 1.69878 16.127 2.0184L2.64566 15.4998L1 21.9197L7.41992 20.2731L20.9013 6.79173C21.221 6.47946 21.4756 6.10692 21.6505 5.69563C21.8253 5.28434 21.9169 4.84248 21.9199 4.39558C21.9229 3.94869 21.8374 3.50562 21.6681 3.09201C21.4988 2.67839 21.2493 2.30243 20.9338 1.98586V1.98586Z"
-                  stroke="#615E83"
-                  stroke-width="1.3"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </div>
-          </div>
-          <div class="field">
-            <label>Password</label>
+    <div>
+      <strong>Email account</strong>
+      <label for="text">
+        <input type="text" id="text" [(ngModel)]="user.email" />
+      </label>
+    </div>
 
-            <div class="input">
-              <input type="password" placeholder="Password" />
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="23"
-                height="23"
-                viewBox="0 0 23 23"
-                fill="none"
-              >
-                <path
-                  d="M20.9338 1.98586C20.6171 1.6705 20.2411 1.42101 19.8274 1.25181C19.4137 1.08261 18.9706 0.997052 18.5236 1.00008C18.0767 1.0031 17.6348 1.09465 17.2234 1.26944C16.8121 1.44422 16.4394 1.69878 16.127 2.0184L2.64566 15.4998L1 21.9197L7.41992 20.2731L20.9013 6.79173C21.221 6.47946 21.4756 6.10692 21.6505 5.69563C21.8253 5.28434 21.9169 4.84248 21.9199 4.39558C21.9229 3.94869 21.8374 3.50562 21.6681 3.09201C21.4988 2.67839 21.2493 2.30243 20.9338 1.98586V1.98586Z"
-                  stroke="#615E83"
-                  stroke-width="1.3"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </div>
-          </div>
-          <div class="field">
-            <label>User ID</label>
+    <div>
+      <strong>Phone number </strong>
+      <label for="text">
+        <input type="text" id="text" [(ngModel)]="user.phone" />
+      </label>
+    </div>
 
-            <div class="input">
-              <input type="text" placeholder="Enter your user id" />
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="23"
-                height="23"
-                viewBox="0 0 23 23"
-                fill="none"
-              >
-                <path
-                  d="M20.9338 1.98586C20.6171 1.6705 20.2411 1.42101 19.8274 1.25181C19.4137 1.08261 18.9706 0.997052 18.5236 1.00008C18.0767 1.0031 17.6348 1.09465 17.2234 1.26944C16.8121 1.44422 16.4394 1.69878 16.127 2.0184L2.64566 15.4998L1 21.9197L7.41992 20.2731L20.9013 6.79173C21.221 6.47946 21.4756 6.10692 21.6505 5.69563C21.8253 5.28434 21.9169 4.84248 21.9199 4.39558C21.9229 3.94869 21.8374 3.50562 21.6681 3.09201C21.4988 2.67839 21.2493 2.30243 20.9338 1.98586V1.98586Z"
-                  stroke="#615E83"
-                  stroke-width="1.3"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-            </div>
-          </div>
-        </div>
-        <div class="ps-right">
-          <img src="../../../assets/profile-settings.png" alt="" />
-        </div>
-      </div> -->
-  <!-- <div
-        class="imp-banner"
-        style="
-          display: flex;
-          justify-content: start;
-          gap: 5px;
-          align-items: start;
-        "
-      >
-        <span
-          style="
-            font-weight: 500;
-            font-family: 'DM Sans';
-            color: black;
-            width: fit-content;
-            white-space: nowrap;
-            font-size: 14px;
-            display: flex;
-            align-items: center;
-            gap: 5px;
-          "
-          ><img src="../../../assets/info-icon.png" /> Important Note:</span
-        >
-        <p
-          style="
-            margin-bottom: 0;
-            font-family: 'DM Sans';
-            font-size: 14px;
-            color: black;
-          "
-        >
-          Please note that “not sent” , might be because target is not valid
-          mobile or international number or your settings are configured not be
-          send this Message type by SMS. Device sending is limited to avoid bans
-          , these limits are gradually reduced to mitigate that risk.
-        </p>
-      </div> -->
+    <div>
+      <strong>App Link</strong>
+      <label for="text">
+        <input type="text" id="text" [(ngModel)]="user.app_link" />
+      </label>
+    </div>
+  </div>
+  <div class="profile-Btn">
+    <button class="Canceltbutton" (click)="onCancel()">Cancel</button>
+    <button class="editbutton" (click)="OnSave()">
+      <span *ngIf="!isLoading">Save</span>
+      <span *ngIf="isLoading">
+        <i class="fa fa-spinner fa-spin"></i> Saving...
+      </span>
+    </button>
+  </div>
 </ng-container>
