--- a/src/app/screens/button-stats/button-stats.component.css
+++ b/src/app/screens/button-stats/button-stats.component.css
@@ -23,7 +23,7 @@ header input {
   gap: 10px;
   border-radius: 148px;
   border: 1px solid rgba(46, 188, 150, 0.2);
-  background: rgba(255, 255, 255, 0.2);
+  background: transparent !important;
 }
 
 .search {
@@ -31,14 +31,13 @@ header input {
   align-items: center;
   gap: 0.5rem;
   border-radius: 8px;
-  background: #fff;
-  box-shadow: 0px 5px 22px 0px rgba(238, 238, 238, 0.5);
-  padding: 0 1rem;
+  background: transparent !important;
+  border-radius: 148px !important;
   position: relative;
 }
 .search img {
   position: absolute;
-  left: 2.6rem;
+  left: 1.6rem;
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
@@ -73,25 +72,30 @@ header input {
 }
 
 .cards {
-  column-count: 3; 
-  column-gap: 5px;
+  column-count: 3;
+  column-gap: 35px;
 }
-
 .card {
   display: inline-block;
   width: 100%;
   background: #fff;
-  border-radius: 16px;
   align-self: start;
-  box-shadow: 0 5px 22px rgba(238, 238, 238, 0.5);
-  padding: 8px;
+  border: none !important;
+  padding: 20px;
   border-radius: 15px;
-  background: #fff;
   box-shadow: 0 4px 20px 0 rgba(112, 144, 128, 0.2);
   height: auto;
   margin: 0 0 5px;
+  break-inside: avoid;
+  margin-bottom: 35px; 
+  break-inside: avoid; 
+  -webkit-column-break-inside: avoid;
+  -moz-column-break-inside: avoid;
 }
-
+/* .card:nth-child(2),
+.card:nth-child(4) {
+  margin-top: 30px;
+} */
 .card-body1 {
   display: flex;
   align-items: center;
@@ -106,14 +110,6 @@ header input {
   font-weight: 700;
 }
 
-.card-header .status {
-  background: #e6fff5;
-  color: #2ebc96;
-  font-size: 12px;
-  font-weight: 600;
-  border-radius: 12px;
-  padding: 2px 8px;
-}
 .icon {
   display: flex;
   align-items: center;
@@ -124,14 +120,15 @@ header input {
   height: 45px;
   background: rgba(46, 188, 150, 0.1);
   padding: 8px;
+  border-radius: 5px;
 }
 .card-body1 span {
-  display: flex;
-  padding: 1px 13px;
-  flex-direction: column;
-  align-items: flex-start;
-  border-radius: 50px;
   background: rgba(32, 255, 12, 0.4);
+  color: #5bc052;
+  font-size: 12px;
+  font-weight: 600;
+  border-radius: 12px;
+  padding: 2px 8px;
 }
 
 .total-clicks {
@@ -160,7 +157,7 @@ header input {
   justify-content: space-between;
   align-items: center;
   padding: 12px;
-  border-radius: 6px;
+  border-radius: 10px;
   font-size: 14px;
   font-weight: 500;
   margin-bottom: 8px;
@@ -171,7 +168,7 @@ header input {
   background: rgba(46, 188, 150, 0.1);
   border-left: 3px solid #2b88eb;
 }
-.items li.bgn {
+.items li:nth-child(3) {
   background: rgba(147, 51, 234, 0.1);
   border-left: 3px solid #9333ea;
 }
@@ -211,4 +208,7 @@ header input {
   display: flex;
   flex-direction: column;
   height: 30px;
+}
+.percent svg path {
+  stroke: currentColor;
 }
