--- a/src/app/screens/button-stats/button-stats.component.html
+++ b/src/app/screens/button-stats/button-stats.component.html
@@ -80,6 +80,7 @@
       </ul>
     </div>
   </div>
+ 
   <div class="col">
     <div class="card" *ngFor="let template of col2">
       <div class="card-body">
@@ -119,12 +120,36 @@
           <span>{{ item.label }}</span>
           <div class="percent1">
             <span class="value">{{ item.value | number }}</span>
-            <span class="percent">{{ item.percent }}%</span>
+            <span class="percent"
+              >{{ item.percent }}%
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="13"
+                height="14"
+                viewBox="0 0 13 14"
+                fill="none"
+              >
+                <path
+                  d="M1.04004 1.51999V11.7493C1.04004 12.1529 1.36717 12.48 1.77071 12.48H12"
+                  stroke="currentColor"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M11.2694 4.44254L7.61606 8.0958L5.78939 6.26906L3.23206 8.82639"
+                  stroke="currentColor"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                /></svg
+            ></span>
           </div>
         </li>
       </ul>
     </div>
   </div>
+ 
   <div class="col">
     <div class="card" *ngFor="let template of col3">
       <div class="card-body">
@@ -164,10 +189,34 @@
           <span>{{ item.label }}</span>
           <div class="percent1">
             <span class="value">{{ item.value | number }}</span>
-            <span class="percent">{{ item.percent }}%</span>
+            <span class="percent"
+              >{{ item.percent }}%
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="13"
+                height="14"
+                viewBox="0 0 13 14"
+                fill="none"
+              >
+                <path
+                  d="M1.04004 1.51999V11.7493C1.04004 12.1529 1.36717 12.48 1.77071 12.48H12"
+                  stroke="currentColor"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M11.2694 4.44254L7.61606 8.0958L5.78939 6.26906L3.23206 8.82639"
+                  stroke="currentColor"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                /></svg
+            ></span>
           </div>
         </li>
       </ul>
     </div>
   </div>
+ 
 </div>
