--- a/src/app/screens/devices/devices.component.html
+++ b/src/app/screens/devices/devices.component.html
@@ -141,7 +141,7 @@
       <div>
         <p>{{ deviceConnections[item.device_id] || "Active" }}</p>
         <!-- Display connection status for each device -->
-        <p>{{ item.device_name || "Official WhatsApp Account" }}</p>
+        <p>{{ item?.device_name || "Official WhatsApp Account" }}</p>
       </div>
     </li>
     <!-- <li
@@ -200,7 +200,7 @@
     </div>
     <div>
       <div (click)="openGreenApi(currentDevice, currentIndex)"
-        *ngIf="currentDevice.device_name !== 'Official WhatsApp Account'" class="device-btn-container"
+        *ngIf="currentDevice?.device_name !== 'Official WhatsApp Account'" class="device-btn-container"
         style="position: relative; z-index: 100">
         <button>
           <img src="../../../assets/d-reboot.png" />
@@ -282,7 +282,7 @@
 
   <div style="display: flex; gap: 10px;margin-top: 6rem;">
     <div class="reports">
-      <app-reports [graphData]="barChartData" [totalMsg]="totalMsg" [totalSms]="totalSms"
+      <app-reports *ngIf="barChartData" [graphData]="barChartData" [totalMsg]="totalMsg" [totalSms]="totalSms"
         [totalWhatsapp]="totalWhatsapp" [notSent]="notSent"></app-reports>
     </div>
     <div class="msg-details">
