--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -220,16 +220,19 @@
                 routerLinkActive="active"
                 class="nested_sub_menu_item"
                 (click)="
-                  setCurrentSubItem('contact', $event);
-                  $event.stopPropagation()
+                  setCurrentSubItem('contact', $event); $event.stopPropagation()
                 "
               >
                 <img src="../../../assets/clipboard-text.svg" />
                 <span>Contact</span>
               </li>
               <li
-                routerLink="/broadcast-whatsapp/campaign"
+                routerLink="/broadcast/sms-templates"
                 routerLinkActive="active"
+                (click)="
+                  setCurrentSubItem('smstemplates', $event);
+                  $event.stopPropagation()
+                "
                 class="nested_sub_menu_item"
               >
                 <img src="../../../assets/document-forward.svg" />
@@ -237,8 +240,12 @@
               </li>
 
               <li
-                routerLink="/broadcast-whatsapp/campaign"
+                routerLink="/broadcast/create-templates"
                 routerLinkActive="active"
+                (click)="
+                  setCurrentSubItem('createtemplates', $event);
+                  $event.stopPropagation()
+                "
                 class="nested_sub_menu_item"
               >
                 <img src="../../../assets/document-forward.svg" />
